fortune-pod-env-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-env-from-configmap
spec:
  containers:
  - image: luksa/fortune:env
    name: kubia
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
