gitrepo-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepo-volume-pod
spec:
  containers:
  - image: nginx:alpine
    name: web-server
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
  volumes: 
  - name: html 
    gitRepo:
      repository: https://github.com/luksa/kubia-website-example.git 
      directory: .
      revision: master 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
