kubia-deployment-v3-with-readinesscheck.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
  name: kubia
spec: 
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 0
      maxSurge: 1
  template: 
    metadata: 
      name: kubia
      labels: 
        app: kubia
    spec:  
      containers: 
      - name: nodejs
        image: luksa/kubia:v3
        readinessProbe: 
          periodSeconds: 1
          httpGet: 
            path: /
            port: 8080
