kubia-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
  name: kubia 
spec: 
  replicas: 3
  template: 
    metadata: 
      name: kubia
      labels: 
        app: kubia
    spec: 
      containers: 
      - name: nodejs 
        image: luksa/kubia:v1
