kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: kubia-gpu
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  nodeSelector:
    gpu: "true"
status: {}
