kubia-liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  name: kubia-liveness
spec:
  containers:
  - image: luksa/kubia-unhealthy
    name: kubia
    resources: {}
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 10
