label.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    creation_method: manual
    env: prod
  name: kubia-manual-v2
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    resources: {}
    ports:
    - containerPort: 8080
      protocol: TCP
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
