mongodb-pod-gcepd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
  - image: mongo
    name: mongo
    resources: {}
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
    ports: 
    - containerPort: 27017
      protocol: TCP
  volumes: 
  - name: mongodb-data
    gcePersistentDisk: 
      pdName: mongodb
      fsType: ext4
