ssd-monitor-daemonset.yaml
apiVersion: apps/v1beta2
kind: DaemonSet
metadata:
  name: ssd-monitor
spec:
  selector:
    matchLabels: 
      app: ssd-monitor 
  template:
    metadata: 
      labels: 
        app: ssd-monitor
    spec: 
      containers:
      - image: luksa/kubia
        name: kubia
      nodeSelector:
        disk: ssd
