template.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  #labels:
  #  run: anything
  name: 
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    resources: {}
