kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  ports: 
  - port: 80
    targetPort: 8080
    name: http
  - port: 443
    name: https
    targetPort: 8443
  selector: 
    app: kubia
  sessionAffinity: ClientIP
