podsvc.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: kubiaposvc
spec: 
  containers: 
  - name: kubia
    image: luksa/kubia
    ports: 
    - name: http
      containerPort: 8080
    - name: https
      containerPort: 8443

---

apiVersion: v1
kind: Service
metadata: 
  name: kubiasvcpod
spec: 
  ports: 
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
