ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec: 
  rules: 
  - host: kubia.example.com 
    http: 
      paths: 
      - path: /
        backend: 
          serviceName: kubia-nodeport
          servicePort: 80
